# keystone-demo

./: .gitignore  .prebuilt_tools_shasums  CMakeLists.txt  README.md  edge_wrapper.cpp  edge_wrapper.h  enclave-host.cpp  macros.cmake  quick-start.sh  setup_musl.sh  source.sh
include/: edge_defines.h  eh_shared.h  enclave_expected_hash.h  hacks.h  messages.h  session_context.c  session_context.h  sm_expected_hash.h  test_client_key.h
provisioning/: README.md  provision  provision.c
scripts/: get_attestation_modified.sh
server_eapp/: CMakeLists.txt  calculator.h  channel.c  channel.h  edge_wrapper.c  edge_wrapper.h  server_eapp.c  services.c  services.h
trusted_client/: client.cpp  trusted_client.cpp  trusted_client.h
